Colaboratory를 통해 생성됨

--- a/3d_render_densepose.ipynb
+++ b/3d_render_densepose.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled18.ipynb",
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyPcmv41/DkGWsHC9n42nBW9",
+      "authorship_tag": "ABX9TyNjkygadCUTYzakMFirx9DB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -190,7 +190,7 @@
         "        os.environ[\"CUB_HOME\"] = os.getcwd() + \"/cub-1.10.0\"\n",
         "        !pip install 'git+https://github.com/facebookresearch/pytorch3d.git@stable'"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -245,7 +245,7 @@
         "# We also install chumpy as it is needed to load the SMPL model pickle file.\n",
         "!pip install chumpy"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,7 +304,7 @@
         "import os\n",
         "sys.path.append(os.path.abspath(''))"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -316,13 +316,33 @@
         "## Load the SMPL model\n",
         "\n",
         "#### Download the SMPL model\n",
-        "- Go to http://smpl.is.tue.mpg.de/downloads and sign up.\n",
+        "- Go to http://smpl.is.tue.mpg.de/downloads and sign up.  **-------> https://smpl-x.is.tue.mpg.de/modellicense.html**\n",
         "- Download SMPL for Python Users and unzip.\n",
         "- Copy the file male template file **'models/basicModel_m_lbs_10_207_0_v1.0.0.pkl'** to the data/DensePose/ folder.\n",
         "   - rename the file to **'smpl_model.pkl'** or rename the string where it's commented below\n",
         "   \n",
         "If running this notebook using Google Colab, run the following cell to fetch the texture and UV values and save it at the correct path."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0zcL2k-q0Cqf"
+      },
+      "source": [
+        "### https://smpl.is.tue.mpg.de/\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iyXFAqic0Au5"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -342,7 +362,7 @@
         "!tar xvf densepose_uv_data.tar.gz -C data/DensePose\n",
         "!rm densepose_uv_data.tar.gz"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
